--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django-allauth = "*"
 djangorestframework = "*"
 djangorestframework-simplejwt = "*"
 django-environ = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 
